system/vault/resources/internal-ingress.yaml
apiVersion: projectcontour.io/v1
kind: IngressRoute
metadata:
  name: vault-ingress
  namespace: vault
spec:
  ingressClass: contour-internal
  virtualhost:
    fqdn: vault.mgmtv2.cedille.club
    tls:
      secretName: vault-tls
  routes:
    - conditions:
        - header:
            contains: application/grpc
            name: Content-Type
      services:
        - name: vault-ui
          port: 8200
          protocol: h2c
    - services:
        - name: vault-ui
          port: 8200
